--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~7.1.4",
-    "@angular/core": "~7.1.4",
+    "@angular/common": "^7.2.0",
     "@angular/fire": "^5.1.1",
     "@angular/forms": "~7.1.4",
     "@angular/http": "~7.1.4",
@@ -26,7 +25,11 @@
     "@ionic-native/status-bar": "5.0.0-beta.21",
     "@ionic/angular": "4.0.0-rc.1",
     "@ionic/pro": "2.0.4",
+    "@types/chart.js": "^2.7.50",
     "angularfire2": "^5.1.1",
+    "bootstrap": "^4.3.1",
+    "chart.js": "^2.8.0",
+    "chartjs-plugin-datalabels": "^0.6.0",
     "cordova-android": "7.1.4",
     "cordova-browser": "5.0.4",
     "cordova-plugin-device": "^2.0.2",
@@ -37,31 +40,38 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "core-js": "^2.5.4",
     "firebase": "^5.8.1",
+    "ng2-charts": "^2.2.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.11.4",
-    "@angular-devkit/build-angular": "^0.12.3",
+    "@angular-devkit/build-angular": "^0.13.7",
     "@angular-devkit/core": "~7.1.4",
     "@angular-devkit/schematics": "~7.1.4",
-    "@angular/cli": "~7.1.4",
-    "@angular/compiler": "~7.1.4",
-    "@angular/compiler-cli": "~7.1.4",
+    "@angular/cli": "^7.3.7",
+    "@angular/compiler": "^7.1.4",
+    "@angular/compiler-cli": "^7.2.11",
+    "@angular/core": "^7.2.0",
     "@angular/language-service": "~7.1.4",
     "@ionic/angular-toolkit": "~1.2.0",
     "@ionic/lab": "1.0.18",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~10.12.0",
+    "ajv": "^6.9.1",
+    "chartjs-plugin-annotation": "^0.5.7",
     "codelyzer": "~4.5.0",
+    "cordova-plugin-ionic": "^5.3.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
+    "jquery": "^1.9.1",
     "karma": "~3.1.4",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "popper.js": "^1.14.7",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.12.0",
